@@ -3,6 +3,7 @@ CHANGELOG Roundcube Webmail
 
 - Plugin API: Add special onload() method to execute plugin actions before startup (session and GUI initialization)
 - Add possibility to print contact information (of a single contact)
+- Add possibility to configure max_allowed_packet value for all database engines (#1490283)
 - Fix refreshing of drafts list when sending a message which was saved in meantime (#1490238)
 - Fix saving/sending emoticon images when assets_dir is set
 - Fix PHP fatal error when visiting Vacation interface and there's no sieve script yet
